添加业务层，依赖注入业务层

--- a/YingCaiAi/YingCaiAiWin/YingCaiAiWin.csproj
+++ b/YingCaiAi/YingCaiAiWin/YingCaiAiWin.csproj
@@ -30,6 +30,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\YingCaiAiModel\YingCaiAiModel.csproj" />
+    <ProjectReference Include="..\YingCaiAiService\YingCaiAiService.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Assets\applicationIcon-256.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
