--- a/knowledgebase-backend/docker-compose.yml
+++ b/knowledgebase-backend/docker-compose.yml
@@ -6,11 +6,11 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - POSTGRES_HOST=127.0.0.1
+      - POSTGRES_HOST=milvus_postgres_1
       - POSTGRES_PORT=5432
       - POSTGRES_USER=yingcai
       - POSTGRES_PASSWORD=123456
       - POSTGRES_DB=your_dbyingcaiai
-      - MILVUS_HOST=127.0.0.1
+      - MILVUS_HOST=milvus-standalone
       - MILVUS_PORT=19530
     depends_on: []
