--- a/YingCaiAi/YingCaiAiWin/YingCaiAiWin.csproj
+++ b/YingCaiAi/YingCaiAiWin/YingCaiAiWin.csproj
@@ -38,7 +38,9 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
     <PackageReference Include="HandyControl" Version="3.5.1" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Playwright" Version="1.52.0" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3296-prerelease" />
     <PackageReference Include="NPOI" Version="2.7.3" />
     <PackageReference Include="WPF-UI" Version="4.0.2" />
